tests/typing/fail/0011_intros.ec
lemma toto : forall (p:bool), p => p.
proof.
  intros p p.
